# dynamo-db-full-scan-tool

./: .dockerignore  .env  CHANGELOG.md  Dockerfile  Home.py  README.md  README_INSTALL.md  aws_client.py  data_fetcher.py  filters.py  install_venv.bat  setup.cfg  start.bat  start_tests_venv.bat  styles.css  updater.py  utils.py
dynamodb_control_plane.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_aws_client.py  test_data_fetcher.py  test_filters.py  test_updater.py
