[metadata]
name = dynamodb-control-plane
version = 0.1.0
author = Your Name
description = Streamlit tool + unit tests for DynamoDB management

[options]
packages = find:
install_requires =
    streamlit
    boto3
    pandas
    pytest
    moto==4.2.12

[tool:pytest]
addopts = -ra -q
testpaths = tests

[flake8]
max-line-length = 88
exclude = venv,__pycache__,.pytest_cache
